--- a/src/components/Combobox/Combobox.module.scss
+++ b/src/components/Combobox/Combobox.module.scss
@@ -163,6 +163,7 @@
 }
 
 .positioner {
+  z-index: 1000;
   outline: 0;
 }
 
