--- a/src/components/PhoneInput/PhoneInput.module.scss
+++ b/src/components/PhoneInput/PhoneInput.module.scss
@@ -129,6 +129,7 @@
 
 // Popup styles
 .positioner {
+  z-index: 1000;
   outline: 0;
 }
 
